--- a/assets/front/css/skins/default.css
+++ b/assets/front/css/skins/default.css
@@ -227,7 +227,7 @@ html .border-color-hover-light:hover {
 }
 
 .alternative-font {
-	color: #9ecd59;
+	color: #636365;
 }
 
 html .box-shadow-1-primary:before {
@@ -1768,7 +1768,7 @@ html section.section-primary h6 {
 }
 
 html section.section-primary p {
-	color: #e6e6e6;
+	color: #636365;
 }
 
 html section.section-primary-scale-2 {
