--- a/assets/front/css/skins/default.css
+++ b/assets/front/css/skins/default.css
@@ -2497,7 +2497,7 @@ html body .tabs .nav-tabs .nav-link:hover,
 html.dark body .tabs .nav-tabs .nav-link:hover,
 html body .tabs .nav-tabs li.active .nav-link,
 html.dark body .tabs .nav-tabs li.active .nav-link {
-	color: #9ecd59;
+	color: #636365;
 }
 
 html body .tabs .nav-tabs .nav-link:hover,
