--- a/assets/front/css/skins/default.css
+++ b/assets/front/css/skins/default.css
@@ -5596,8 +5596,8 @@ html .slide-overlay.slide-overlay-gradient .slotholder:after {
 }
 
 #footer .footer-ribbon:before {
-	border-right-color: #005580;
-	border-left-color: #005580;
+	border-right-color: #9ecd59;
+	border-left-color: #9ecd59;
 }
 
 #footer .footer-nav.footer-nav-bottom-line nav > ul:not(:hover) > li > a.active {
