--- a/assets/front/css/skins/default.css
+++ b/assets/front/css/skins/default.css
@@ -3219,7 +3219,7 @@ html .accordion.accordion-primary .card-header a {
 }
 
 html .accordion.accordion-secondary .card-header {
-	background-color: #e36159 !important;
+	background-color: #636365 !important;
 }
 
 html .accordion.accordion-secondary .card-header a {
